--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ""
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://erdochan.github.io/
+url: https://chanservy.github.io/
 # permalink: posts/:category/:year:month:day/:urlname.html
 permalink: posts/:year:month:day/:urlname.html
 permalink_defaults:
@@ -110,5 +110,5 @@ theme: theme-icarus
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
     type: "git"
-    repository: git@github.com:ChanServy/test.git
+    repository: git@github.com:ChanServy/ChanServy.github.io.git
     branch: master
